feat: add complete Javadoc comments and enhance code documentation
- Add Javadoc comments to all Domain Objects (DO classes)
- Add Javadoc comments to Gateway interfaces and implementations
- Add Javadoc comments to Domain Services
- Add Javadoc comments to Controllers and Assemblers
- Add Javadoc comments to Entity classes for MyBatis-Plus
- Add Javadoc comments to DTO, Cmd and Qry classes
- Add complete TradingCostConfig and Entity/Mapper classes
- Rename domain/do package to domain/dom (do is reserved keyword)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>